More is working now

--- a/backend/config.json
+++ b/backend/config.json
@@ -1,7 +1,7 @@
 {
   "mqtt" : {
     "server" : "mqtt://192.168.0.3",
-    "topic" : "/png"
+    "topic" : "/pixels/value"
   },
   "webServerPort" : 3000,
   "token" : "cf97edf7-5ff9-4489-9ba0-8f89d4ee8144"
