--- a/backend/config.json
+++ b/backend/config.json
@@ -1,8 +1,10 @@
 {
-  "mqtt" : {
-    "server" : "mqtt://192.168.0.3",
-    "topic" : "/pixels/value"
+  "mqtt": {
+    "server": "mqtt://192.168.0.3",
+    "topicValue": "/pixels/value",
+    "topicBrightness": "/pixels/brightness",
+    "topicStatus": "/pixels/status"
   },
-  "webServerPort" : 3000,
-  "token" : "cf97edf7-5ff9-4489-9ba0-8f89d4ee8144"
+  "webServerPort": 3000,
+  "token": "cf97edf7-5ff9-4489-9ba0-8f89d4ee8144"
 }
