--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "author": "Sebastian Hardt (tuxBurner)",
   "license": "ISC",
   "dependencies": {
+    "emojione": "^2.2.6",
     "express": "^4.14.0",
     "get-pixels": "^3.3.0",
     "mqtt": "^1.11.2",
     "multer": "^1.1.0",
+    "sharp": "^0.16.0",
     "winston": "^2.2.0"
   }
 }
