--- a/esp_pixels/.vscode/settings.json
+++ b/esp_pixels/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "terminal.integrated.env.linux": {
-        "PATH": "/home/tuxburner/.platformio/penv/bin:/home/tuxburner/.platformio/penv:/home/tuxburner/.nvm/versions/node/v9.0.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin",
+        "PATH": "/home/tuxburner/.platformio/penv/bin:/home/tuxburner/.platformio/penv:/home/tuxburner/.nvm/versions/node/v11.2.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/tuxburner/Android/Sdk/tools:/home/tuxburner/Android/Sdk/platform-tools",
         "PLATFORMIO_CALLER": "vscode"
     }
 }
